--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": "^7.3",
         "agencycoda/mia-core-mezzio": "dev-main",
         "agencycoda/mia-eloquent-mezzio": "dev-main",
-        "laminas/laminas-crypt": "^3.3"
+        "laminas/laminas-crypt": "^3.3",
+        "firebase/php-jwt": "^5.2"
     },
     "autoload": {
         "psr-4": {
