--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "agencycoda/mia-core-mezzio": "dev-main",
         "agencycoda/mia-eloquent-mezzio": "dev-main",
         "laminas/laminas-crypt": "^3.3",
-        "firebase/php-jwt": "^5.2"
+        "firebase/php-jwt": "^5.2",
+        "kreait/firebase-php": "^5.14"
     },
     "autoload": {
         "psr-4": {
