--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "agencycoda/mia-auth-mezzio",
     "description": "The library for Mezzio",
-    "version": "0.0.58",
+    "version": "0.0.59",
     "minimum-stability": "stable",
     "license": "MIT",
     "authors": [{
@@ -9,7 +9,7 @@
         "homepage": "https://agencycoda.com"
     }],
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3",
         "agencycoda/mia-core-mezzio": "dev-main",
         "agencycoda/mia-eloquent-mezzio": "dev-main",
         "laminas/laminas-crypt": "^3.3",
