--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "agencycoda/mia-eloquent-mezzio": "dev-main",
         "laminas/laminas-crypt": "^3.3",
         "firebase/php-jwt": "5.2.1",
-        "kreait/firebase-php": ">=7.5.1",
-        "lcobucci/jwt": "4.0.4"
+        "kreait/firebase-php": "^7.5.0",
+        "lcobucci/jwt": "^4.3.0"
     },
     "autoload": {
         "psr-4": {
