--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "agencycoda/mia-core-mezzio": "dev-main",
         "agencycoda/mia-eloquent-mezzio": "dev-main",
         "laminas/laminas-crypt": "^3.3",
-        "firebase/php-jwt": "5.2.1",
+        "firebase/php-jwt": "^6.3.2",
         "kreait/firebase-php": "^7.5.0",
         "lcobucci/jwt": "^4.3.0"
     },
