--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     }],
     "require": {
         "php": ">=7.3",
-        "agencycoda/mia-core-mezzio": "v2.x-dev",
-        "agencycoda/mia-eloquent-mezzio": "v2.x-dev",
+        "agencycoda/mia-core-mezzio": "dev-main",
+        "agencycoda/mia-eloquent-mezzio": "dev-main",
         "laminas/laminas-crypt": "^3.3",
         "firebase/php-jwt": "^6.3.2",
         "kreait/firebase-php": "^7.5.0",
